fixed scrollbars

--- a/frontend/projects/ui/src/app/catalog-item-details/catalog-item-details.component.scss
+++ b/frontend/projects/ui/src/app/catalog-item-details/catalog-item-details.component.scss
@@ -1,5 +1,5 @@
 .wrapper {
-    height: 800px;
+    height: 100%;
 }
 .content-padding > * {
     padding: 0.5rem;
